[RLS] Update iframe scrollbar behaviour based on scrolling attribute

Currently in RLS path, scrollbar existence is not updated when
"scrolling" attribute is "no". Updated PLSA::ComputeScrollbarExistence
and PLSA::UserInputScrollable to consider scrollbar modes to turn of
scrolling/scrollbars for root layers.

BUG=711474
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2831313002
Cr-Commit-Position: refs/heads/master@{#467207}

Former-commit-id: 31eb41c176f57dbdbf8d5ce4edd45d21a1c9a45c